Bug 65870 - EDITING Changing height of shape via dialog does not work
Summary: EDITING Changing height of shape via dialog does not work
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
4.1.0.0.beta1
Hardware: Other Linux (All)
: medium normal
Assignee: David Tardon
URL:
Whiteboard: target:4.2.0 target:4.1.0.2
Keywords: regression
: 65740 66102 66268 66364 66572 68049 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-06-17 20:23 UTC by Cor Nouws
Modified: 2016-12-30 11:54 UTC (History)
9 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Cor Nouws 2013-06-17 20:23:36 UTC
- new Drawing
- select Rectangle on toolbar and drag to sheet
- F4 > Position and Size > change value for Height
- OK
 > size does not change
 > F4 and see that indeed value is the same

Changing Width does work
Comment 1 Cor Nouws 2013-06-17 20:26:12 UTC
I see it's already a problem in 410 beta1
(Seem not to have a 410 alpha1 hanging around here to test - sorry)
Comment 2 David Tardon 2013-06-19 12:28:54 UTC
caused by commit d02f75a8c36705924ddd6a5921fe3012fafce812
Comment 3 Commit Notification 2013-06-19 12:36:16 UTC
David Tardon committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=8c1d1b66904cdd95e8eec746a81cf1c57ad0e85a

fdo#65870 fix changing shape height via dialog



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2013-06-19 15:09:14 UTC
David Tardon committed a patch related to this issue.
It has been pushed to "libreoffice-4-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a2aa293069220dc75b3d835f691f378bc193ed17&h=libreoffice-4-1

fdo#65870 fix changing shape height via dialog


It will be available in LibreOffice 4.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Cor Nouws 2013-06-24 05:28:37 UTC
*** Bug 66102 has been marked as a duplicate of this bug. ***
Comment 6 Cor Nouws 2013-06-27 18:40:54 UTC
*** Bug 66268 has been marked as a duplicate of this bug. ***
Comment 7 Cor Nouws 2013-06-30 15:07:15 UTC
*** Bug 66364 has been marked as a duplicate of this bug. ***
Comment 8 David Tardon 2013-07-01 04:21:09 UTC
*** Bug 65740 has been marked as a duplicate of this bug. ***
Comment 9 David Tardon 2013-07-09 09:40:55 UTC
*** Bug 66572 has been marked as a duplicate of this bug. ***
Comment 10 David Tardon 2013-08-14 06:17:09 UTC
*** Bug 68049 has been marked as a duplicate of this bug. ***