fdo#65870 fix changing shape height via dialog

(cherry picked from commit 8c1d1b66904cdd95e8eec746a81cf1c57ad0e85a)

Change-Id: I7c61be2c3d368dfd3ea66427c77636f797a7e88a
Signed-off-by: David Tardon <dtardon@redhat.com>
Reviewed-on: https://gerrit.libreoffice.org/4362
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>